# y_ex

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md  coveralls.json  mix.exs
.github/workflows/: elixir.yml  release.yml  rust.yml
bench/: array_concurrent_insert_bench.exs  doc_stress.exs  observer_stress.exs  undo_manager_bench.exs  undo_manager_stress.exs
benchmark/: array_single_element_access.exs  doc_server.exs  insert_text.exs  process_message_v1.exs  text_format.exs  xml_text.exs
config/: config.exs
lib/: array.ex  doc.ex  map.ex  nif.ex  sticky_index.ex  subscription.ex  text.ex  undo_manager.ex  undo_metadata_server.ex  undo_observer.ex  y_ex.ex
lib/managed/: shared_doc.ex  shared_doc_supervisor.ex
lib/protocols/: awareness.ex  shared_doc.ex  sync.ex
lib/server/: doc_server.ex  doc_server_handler.ex  doc_server_worker.ex  observer_behaviour.ex  observer_server.ex  observer_server_state.ex  old  undo_server.ex  undo_server_observer_behaviour.ex  undo_server_worker.ex
lib/shared_type/: array.ex  error.ex  event.ex  map.ex  shared_type.ex  text.ex  weak.ex  xml.ex  xml_element.ex  (+2 more)
native/yex/: Cargo.toml  README.md
native/yex/src/: any.rs  array.rs  atoms.rs  awareness.rs  doc.rs  error.rs  event.rs  lib.rs  map.rs  shared_type.rs  sticky_index.rs  subscription.rs  sync.rs  term_box.rs  text.rs  transaction.rs  undo.rs  undo_observer.rs  utils.rs  weak.rs  wrap.rs  xml.rs  yinput.rs  youtput.rs
test/: any.exs  array_test.exs  concurrent_test.exs  doc_test.exs  map_test.exs  sticky_index_test.exs  subdocs_test.exs  subscription_test.exs  text_test.exs  undo_manager_test.exs  undo_yjs_scenarios_test.exs  y_ex_test.exs
(+25 files in other folders)
