[package]
name = "yex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "yex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
scoped_thread_local = "1.0.0"
serde_json = "1.0.120"
yrs = { version ="0.21.0", features=["sync"] }

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
