[package]
name = "yex"
version = "0.7.2"
authors = []
edition = "2021"

[lib]
name = "yex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
flexbuffers = "25.0.0"
rustler = "0.36.0"
scoped_thread_local = "1.0.0"
serde = "1.0.210"
serde_json = "1.0.120"
yrs = { version ="0.23.0", features=["sync"] }

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
